--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -7,6 +7,7 @@ authors = []
 requires-python = ">=3.13"
 dependencies = [
     "msgspec>=0.19.0",
+    "jsonschema>=4.17.0",
 ]
 
 [dependency-groups]
