--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ dynosaur = "0.2.0"
 erased-serde = "0.4.6"
 error-stack = { version = "0.5.0", features = ["serde"] }
 futures = "0.3.31"
+hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
 openai-api-rs = "6.0.6"
@@ -22,6 +23,7 @@ schemars = { version = "0.8.22", features = ["indexmap2", "impl_json_schema", "u
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
 serde_yml = "0.0.12"
+sha2 = "0.10"
 similar = "2.7.0"
 similar-asserts = { version = "1.7.0", features = ["serde" ] }
 static_assertions = "1.1.0"
@@ -32,9 +34,9 @@ stepflow-execution = { path = "./crates/stepflow-execution" }
 stepflow-mock = { path = "./crates/stepflow-mock" }
 stepflow-plugin = { path = "./crates/stepflow-plugin" }
 stepflow-protocol = { path = "./crates/stepflow-protocol" }
+tempfile = "3.8"
 test-with = { version = "0.14.10", features = ["runtime"] }
 thiserror = "2.0.12"
-tempfile = "3.8"
 tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"]}
 tokio-stream = { version = "0.1.17", features = ["io-util"] }
 tracing = "0.1.41"
