--- a/crates/stepflow-core/Cargo.toml
+++ b/crates/stepflow-core/Cargo.toml
@@ -8,11 +8,15 @@ publish = false
 description = "Core types and functionality for stepflow workflows, schemas, and components."
 
 [dependencies]
+error-stack.workspace = true
+hex.workspace = true
 safer_owning_ref.workspace = true
 schemars.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_yml.workspace = true
+sha2.workspace = true
+thiserror.workspace = true
 url.workspace = true
 
 [dev-dependencies]
