feat: Change to trie-based routing
This allows routing rules to define the component passed to the plugin,
allowing `/python/{*component}` to be passed as `/{component}` to the
Python plugin, and removes the need to track the "prefix" each plugin
was available at (which would be inconsistent if available via multiple
routes anyway).

This also allows adds the ability to filter components used in a rule.

This fixes the list of components by applying a reverse routing step
to indicate the routes that each component is available at.

--- a/examples/basic/stepflow-config.yml
+++ b/examples/basic/stepflow-config.yml
@@ -6,8 +6,8 @@ plugins:
     transport: stdio
     command: uv
     args: ["--project", "../../sdks/python", "run", "stepflow_sdk"]
-routing:
-  - match: "/python/*"
-    target: python
-  - match: "*"
-    target: builtin
+routes:
+  "/builtin/{*component}":
+    - plugin: builtin
+  "/python/{*component}":
+    - plugin: python
