--- a/examples/openai/openai_chat.yaml
+++ b/examples/openai/openai_chat.yaml
@@ -12,13 +12,13 @@ inputs:
 
 steps:
   - id: create_messages
-    component: "create_messages"
+    component: /builtin/create_messages
     input:
       system_instructions: { $from: { workflow: input }, path: system_message }
       user_prompt: { $from: { workflow: input }, path: prompt }
 
   - id: send_message
-    component: "openai"
+    component: /builtin/openai
     input:
       messages: { $from: { step: create_messages }, path: messages }
 
