--- a/stepflow-rs/crates/stepflow-plugin/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-plugin/Cargo.toml
@@ -19,14 +19,16 @@ doctest = false
 dynosaur.workspace = true
 error-stack.workspace = true
 futures.workspace = true
-globset.workspace = true
+indexmap.workspace = true
+matchit.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-serde_with.workspace = true
 stepflow-core.workspace = true
 stepflow-state.workspace = true
 thiserror.workspace = true
 trait-variant.workspace = true
+tracing.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
+serde_yaml_ng.workspace = true
