--- a/tests/basic.yaml
+++ b/tests/basic.yaml
@@ -2,7 +2,7 @@ name: Basic Test Workflow
 description: Simple workflow to test the new test command
 steps:
 - id: message_step
-  component: create_messages
+  component: /builtin/create_messages
   input_schema: null
   output_schema: null
   input:
