--- a/examples/data-pipeline/debug-pipeline.yaml
+++ b/examples/data-pipeline/debug-pipeline.yaml
@@ -14,7 +14,7 @@ input_schema:
 steps:
   # Parallel data processing steps
   - id: sum_revenue_udf
-    component: "put_blob"
+    component: "/builtin/put_blob"
     input:
       data:
         $literal:
@@ -28,7 +28,7 @@ steps:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: count_sales_udf
-    component: "put_blob"
+    component: /builtin/put_blob
     input:
       data:
         $literal:
@@ -42,7 +42,7 @@ steps:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: average_sale_udf
-    component: "put_blob"
+    component: /builtin/put_blob
     input:
       data:
         $literal:
@@ -56,7 +56,7 @@ steps:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: divide_udf
-    component: "put_blob"
+    component: /builtin/put_blob
     input:
       data:
         $literal:
@@ -72,29 +72,29 @@ steps:
 
   # Format metrics summary for display
   - id: format_metrics_udf
-    component: "put_blob"
+    component: /builtin/put_blob
     input:
       data:
         $literal:
           code: |
             performance_status = "✅ EXCEEDED TARGET" if input['performance_ratio'] > 1.0 else "⚠️ BELOW TARGET"
             f"""Sales Performance Analysis:
-            
+
             📊 Key Metrics:
             • Total Revenue: ${input['total_revenue']:,.2f}
             • Sales Count: {input['sales_count']} transactions
             • Average Sale Value: ${input['average_sale']:,.2f}
             • Target Revenue: ${input['target_revenue']:,.2f}
             • Performance vs Target: {input['performance_ratio']:.1%}
-            
+
             🎯 Performance Status: {performance_status}
-            
+
             Please analyze this sales data and provide:
             1. Key insights about our sales performance
             2. What the metrics reveal about our business
             3. Specific recommendations for improving sales
             4. Any concerning trends or positive highlights
-            
+
             Focus on actionable business insights that would help a sales manager make strategic decisions."""
 
   - id: format_metrics_summary
