--- a/examples/file-loading/stepflow-config.yml
+++ b/examples/file-loading/stepflow-config.yml
@@ -6,8 +6,8 @@ plugins:
     args: ["--project", "../../sdks/python", "run", "stepflow_sdk"]
   builtin:
     type: builtin
-routing:
-  - match: "/python/*"
-    target: python
-  - match: "*"
-    target: builtin
+routes:
+  "/builtin/{*component}":
+    - plugin: builtin
+  "/python/{*component}":
+    - plugin: python
