--- a/examples/file-loading/test-load.yaml
+++ b/examples/file-loading/test-load.yaml
@@ -3,7 +3,7 @@ description: "Simple test of the load_file component"
 
 steps:
   - id: load_sales_data
-    component: "load_file"
+    component: /builtin/load_file
     input:
       path: "test-data.json"
 
