--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -21,7 +21,7 @@ erased-serde = "0.4.6"
 error-stack = { version = "0.5.0", features = ["serde"] }
 futures = "0.3.31"
 glob = "0.3"
-globset = "0.4"
+matchit = "0.8.4"
 hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
