--- a/tests/python/stepflow-config.yml
+++ b/tests/python/stepflow-config.yml
@@ -6,8 +6,8 @@ plugins:
     transport: stdio
     command: uv
     args: [--project, "../../sdks/python", run, stepflow_sdk]
-routing:
-  - match: "/python/*"
-    target: python
-  - match: "*"
-    target: builtin
+routes:
+  "/python/{component}":
+    - plugin: python
+  "/builtin/{component}":
+    - plugin: builtin
