--- a/tests/sql-state/stepflow-config.yml
+++ b/tests/sql-state/stepflow-config.yml
@@ -2,7 +2,7 @@ plugins:
   mock:
     type: mock
     components:
-      /mock/identity:
+      /identity:
         input_schema:
           type: object
           properties:
@@ -20,9 +20,9 @@ plugins:
           { value: "Testing" }:
             outcome: success
             result: { result: "Testing" }
-routing:
-  - match: "/mock/*"
-    target: mock
+routes:
+  "/mock/{component}":
+    - plugin: mock
 
 # Use SQLite with in-memory database for testing
 state_store:
