--- a/tests/stepflow-config.yml
+++ b/tests/stepflow-config.yml
@@ -1,6 +1,6 @@
 plugins:
   builtin:
     type: builtin
-routing:
-  - match: "*"
-    target: builtin
+routes:
+  "/builtin/{*component}":
+    - plugin: builtin
