--- a/stepflow-rs/crates/stepflow-main/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-main/Cargo.toml
@@ -23,6 +23,7 @@ rustyline.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_yaml_ng.workspace = true
+stepflow-analysis.workspace = true
 stepflow-builtins.workspace = true
 stepflow-components-mcp.workspace = true
 stepflow-core.workspace = true
