--- a/.github/workflows/release_prepare.yml
+++ b/.github/workflows/release_prepare.yml
@@ -39,6 +39,7 @@ jobs:
         uses: actions/checkout@v4
         with:
             fetch-depth: 0  # Fetch all history for accurate changelog generation
+            token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
